# opengl-model-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini
include/: camera.hpp  error_checking.hpp  mesh.hpp  model.hpp  shader.hpp
lib/assimp/code/: Makefile  cmake_install.cmake
lib/inih/include/inih/: INIReader.h
lib/stbimage/include/stbimage/: stb_image.h
shaders/model/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/stl/: fragment.glsl  vertex.glsl
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
